# libffi

./: CMakeLists.txt  libffi-config.cmake.in
cmake/: ascii_pseudo_op.c  asm_override.cmake  attribute_visibility_hidden.c  cfi_pseudo_op.c  fficonfig.h.in  mmap_anon.c  pcrel.s  string_pseudo_op.c
include/: ffi.h.in
